--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.0.0",
+    "@stripe/stripe-js": "^8.0.0",
+    "@tanstack/react-query": "^5.90.1",
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "next": "15.5.0",
+    "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "stripe": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
