--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "eslint"
   },
