--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
-    "stripe": "^19.1.0"
+    "stripe": "^19.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
