--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.90.1",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.1",
     "cloudinary": "^2.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
@@ -22,6 +23,7 @@
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
