--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.1",
     "cloudinary": "^2.7.0",
+    "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
